; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmlselect.c_HTMLSelectElementImpl_put_disabled.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmlselect.c_HTMLSelectElementImpl_put_disabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @HTMLSelectElementImpl_put_disabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @HTMLSelectElementImpl_put_disabled(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = call %struct.TYPE_3__* @impl_from_HTMLDOMNode(i32* %6)
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %5, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @IHTMLSelectElement_put_disabled(i32* %9, i32 %10)
  ret i32 %11
}

declare dso_local %struct.TYPE_3__* @impl_from_HTMLDOMNode(i32*) #1

declare dso_local i32 @IHTMLSelectElement_put_disabled(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
